1.profile icon bg color changed. 2.cart overflow fixed. 3. product card title overflow fixed. 4.address section fixed.

--- a/src/pages/product/productlistingpage/components/productcard/productcard.css
+++ b/src/pages/product/productlistingpage/components/productcard/productcard.css
@@ -89,13 +89,14 @@ img{
 .name{
     text-shadow: 1px 1px 1px var(--primary-black);
     width:100%;
+    /* height: 2.8rem; */
     font-size:1.1rem;
     display: flex;
     flex-wrap: wrap;
     text-align: left;
-    /* overflow: hidden; */
-    /* text-overflow: ellipsis; */
-    /* white-space: nowrap; */
+  overflow: hidden;
+  max-width: 100%;
+    white-space: nowrap;
     color:black;
     padding-bottom: .3rem;
 }
